--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -104,7 +104,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           cluster-name: ${{ env.EKS_CLUSTER }}
           #config-files: .github/values/dev.yaml
-          chart-path: helm/vprofilecharts
+          chart-path: helm/vprofile-charts
           namespace: default
           values: appimage=${{ secrets.REGISTRY }}/${{ env.ECR_REPOSITORY }},apptag=${{ github.run_number }}
           name: vprofile-stack    
